Enhance index.html descriptions with line breaks for improved readability and update _common.scss to control line break visibility based on screen size. This change aims to ensure better presentation of content across different devices.

--- a/src/styles/layout/_common.scss
+++ b/src/styles/layout/_common.scss
@@ -319,6 +319,16 @@
             text-transform: uppercase;
             color: $white;
         }
+
+        &-description {
+            br{
+                display: none;
+
+                @include media ("<phone") {
+                    display: block;
+                }
+            }
+        }
     }
 }
 
